scripts/wsrep_sst_common.sh
@@ -465,8 +465,9 @@ if [ -z "$WSREP_SST_OPT_BINLOG" -a -n "${MYSQLD_OPT_LOG_BIN+x}" ]; then
         # the "-bin" suffix:
         readonly WSREP_SST_OPT_BINLOG="$WSREP_SST_OPT_LOG_BASENAME-bin"
     else
-        # Take the default name:
-        readonly WSREP_SST_OPT_BINLOG='mysql-bin'
+        # the default name, note that base of this name
+        # is already defined above
+        readonly WSREP_SST_OPT_BINLOG_INDEX="$WSREP_SST_OPT_BINLOG.index"
     fi
 fi
 
@@ -549,9 +550,9 @@ get_binlog()
                 # the "-bin" suffix:
                 readonly WSREP_SST_OPT_BINLOG_INDEX="$WSREP_SST_OPT_LOG_BASENAME-bin.index"
             else
-                # If the base name not specified, then we take
-                # the default name:
-                readonly WSREP_SST_OPT_BINLOG_INDEX='mysql-bin.index'
+                # the default name, note that base of this name
+                # is already defined above
+                readonly WSREP_SST_OPT_BINLOG_INDEX="$WSREP_SST_OPT_BINLOG.index"
             fi
         fi
     fi
